[package]
name = "ai-risk-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15"
hyper = "1.6.0"
anyhow = "1.0.98"
tower-http = { version = "0.6.6", features = ["cors"] }
